# openSNAP

./: .env.dist  .gitignore  README.md  opensnap-dns-log  opensnap.db-journal  pyproject.toml  requirements.txt  run.py
opensnap/: __init__.py  bootstrap_server.py  config.py  env_loader.py  game_server.py  logging_utils.py  server.py  udp_server.py
opensnap/core/: __init__.py  accounts.py  auth.py  context.py  engine.py  lobbies.py  rooms.py  router.py  sessions.py
opensnap/core/bootstrap/: __init__.py  handlers.py
opensnap/plugins/: __init__.py  base.py  registry.py
opensnap/protocol/: __init__.py  codec.py  commands.py  constants.py  enums.py  fields.py  models.py
opensnap/storage/: factory.py  interfaces.py  sqlite.py
opensnap_dns/: __init__.py  config.py  server.py
opensnap_web/: __init__.py  app.py  config.py  server.py  signup.py  wsgi.py
opensnap_web/games/: __init__.py  automodellista.py  automodellista_beta1.py  base.py  monsterhunter.py  registry.py
tests/: test_auth.py  test_automodellista_beta1_plugin.py  test_automodellista_rules.py  test_codec.py  test_config.py  test_dns_config.py  test_dns_runtime.py  test_dns_server.py  test_engine_flow.py  test_env_loader.py  test_game_detection.py  test_log_replay.py  test_logging_utils.py  test_plugins.py  test_run.py  test_server_roles.py  test_service_entrypoints.py  test_sessions.py  test_socket_reuse.py  test_sqlite_backend.py  test_storage_factory.py  test_udp_reliability.py  test_udp_server_runtime.py  test_web_config.py  test_web_routes.py  test_web_signup.py  test_web_wsgi.py
(+6 files in other folders)
