[build-system]
requires = ['setuptools>=69', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'opensnap'
version = '0.1.0'
description = 'Clean-room SN@P server implementation.'
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
    'cryptography>=42.0.0',
]

[project.scripts]
opensnap-server = 'opensnap.server:main'
